<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.innovagenesis.aplicaciones.android.proyectofinalunidadseisv2.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitleLogin"
            style="@style/txtsLogin"
            android:text="@string/txtTitleLogin"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAsistenciaLogin"
            style="@style/txtsLogin"
            android:text="@string/txtAsistenciaLogin" />

    </LinearLayout>


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="158dp"
        android:layout_height="134dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        app:srcCompat="@drawable/parking" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userNameLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userNameLogin" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userNamePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userNamePass" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/recordarmeLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/recordarme" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:id="@+id/ingresarLogin"
            android:text="@string/ingresarLogin" />

    </LinearLayout>


</LinearLayout>
