<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioExportar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioLimpiarReg"
            android:checked="true"
            android:text="@string/exportWithClear"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RadioButton
            android:id="@+id/radioExportarReg"
            android:text="@string/exportWithoutClear"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RadioGroup>

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/btnExpOk"
            android:padding="3dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/btnOk" />

        <Button
            android:id="@+id/btnExpCancel"
            android:padding="3dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel" />

    </LinearLayout>

</LinearLayout>